apply plugin: 'idea'
apply plugin: 'eclipse'
apply from: 'versions.gradle'

project.description = '''
the service layer of moseeker. It\'s going to serve all moseeker\'s products.
    1) a SpringMVC to provide HTTP API
    2) ZooKeeper as the service manager
    3) Thrift as the RPC framework
    4) JOOQ as the data access layer
'''
allprojects {

    repositories {
	     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         mavenCentral()
         maven { url 'http://maven.oschina.net/content/groups/public/' }
         maven { url 'http://maven.outofmemory.cn/' }
         maven { url 'https://plugins.gradle.org/m2/'}
    }

}

apply plugin: 'java'

task copyJars(type: Copy) {
  from configurations.runtime
  into 'lib' // 目标位置
}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = 1.8

    sourceSets {
        main {
            resources {
                //exclude '**/*'
            }
        }
    }

    task copyEnvResources {

        group "environmental configs"
        description "Use one set of configs in /src/main/resources/\$env, defaults to 'debug'"

        def env = project.getProperties()['env'] ?: 'debug'
        logger.quiet(env)
        def envResourcesSrc = "src/main/resources/$env/"

        doLast {
            copy {
                from envResourcesSrc
                into processResources.destinationDir
            }
        }

    }

    jar {
        dependsOn copyEnvResources
    }
}


